Fix gradient on safari

--- a/src/Head/Head.styl
+++ b/src/Head/Head.styl
@@ -23,7 +23,7 @@
         left -15px
         height 15px
         top 100%
-        background linear-gradient(to bottom, white 0%, transparent 100%)
+        background linear-gradient(to bottom, white 0%, rgba(255, 255, 255, .001) 100%)
 
   +breakpoint("desktop")
     float left
