--- a/src/WebHeader/WebHeader.styl
+++ b/src/WebHeader/WebHeader.styl
@@ -77,7 +77,7 @@
     &:before
       content ''
       display block
-      background linear-gradient(to bottom, transparent 0%, white 100%)
+      background linear-gradient(to bottom, rgba(255, 255, 255, .001) 0%, white 100%)
       bottom 100%
       width 100%
       height 20px
